Add Form Login & Reg

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -762,4 +762,24 @@
 					z-index: 1
 
 
+.form__in
+	max-width: 550px
+	margin: 0 auto
+	width: 100%
+	p
+		label
+			width: 100%
+			display: block
+
+		input
+			width: 100%
+			border: none
+			border-bottom: 1px solid #f1f1f1
+
+	button
+		display: block
+		padding: 12px 80px
+		display: inline-block
+			
+
 @import media
