--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -118,7 +118,11 @@
 		background-position: left center
 
 	.header__content-h1
-		font-size: 72px										
+		font-size: 72px						
+
+	.inside__product
+		.product__img
+			margin-bottom: 30px					
 
 // ≥768px
 +media-breakpoint-down(sm)
