--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -761,6 +761,9 @@
 					opacity: 1
 					z-index: 1
 
+.login__wrapper, .inside__product, .paymond__wrapper
+	margin-bottom: 30px
+
 
 .form__in
 	max-width: 550px
@@ -781,5 +784,72 @@
 		padding: 12px 80px
 		display: inline-block
 			
+
+.payment__list
+	margin-top: 80px
+	border: 2px solid #f1f1f1
+
+	.payment__items
+		border-bottom: 2px solid #f1f1f1
+		padding: 10px 15px
+		display: flex
+		justify-content: space-between
+		&.pay
+			justify-content: center
+		strong
+			font-size: 18px
+			display: block
+
+		span
+			font-size: 18px
+			display: block	
+
+		form
+			padding: 10px 15px	
+
+.inside__product
+	padding-top: 80px
+	.product__img
+		max-width: 400px
+		height: 400px
+		width: 100%
+		margin: 0 auto
+		border: 3px solid $accent
+		overflow: hidden
+		border-radius: 15px
+		position: relative
+		img
+			width: 100%
+			height: 100%
+			position: absolute
+			left: 50%
+			top: 50%
+			transform: translate(-50%, -50%)
+			object-fit: cover
+
+	.product__title
+		font-size: 24px
+		font-weight: bold
+		margin-bottom: 15px
+
+	.product__desc
+		margin-bottom: 20px
+
+	.product__price
+		font-size: 36px
+		color: $blue
+		font-weight: bold
+		margin-bottom: 30px				
+
+		span
+			font-size: 16px
+			display: block
+			color: #000
+			font-weight: normal
+			line-height: 1
+
+	.product__btn
+		a
+			padding: 12px 54px		
 
 @import media
